add global variable
  - add gray color variable
  - add font variable

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Martian+Mono&family=Open+Sans&display=swap");
+
 *,
 *::after,
 *::before {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+:root {
+  --gray-100: hsl(215, 19%, 35%);
+  --gray-50: hsl(24, 6%, 83%);
+
+  --ff-code: "Martian Mono";
+  --ff-text: "Open Sans";
 }
